--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 height: 100vh;
             }
             .img {
-                background: url("img.jpg") no-repeat;
+                background: url("img.jpg") no-repeat center;
                 background-size: cover;
                 width: 100%;
                 height: 100%;
