--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="img">
                 <h1>Incubation.uz</h1>
-                <p><span>for sale:</span> 1 000 000$</p>
+                <!-- <p><span>for sale:</span> 1 000 000$</p> -->
             </div>
         </div>
     </body>
