--- a/index.html
+++ b/index.html
@@ -1,126 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Incubation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <img src="logo.png" alt="Business Incubation Logo" id="logo">
-            <h1>Business Incubation</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Home Section (with background image) -->
-    <section id="home">
-        <div class="home-content">
-            <h2>Welcome to Our Business Incubator</h2>
-            <p>Your path to success starts here. We help startups grow and thrive.</p>
-            <a href="#services" class="cta-button">Learn More</a>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-           
-            <div class="service">
- 		<h1>Our Services</h1>
-                <h3>Business Mentoring</h3>
-			<img src="homepic3.jpeg" alt="About Us Image">
-
-                <p>Get expert advice and guidance to navigate the startup world.</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Business Incubation</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- Header Section -->
+        <header>
+            <div class="container">
+                <img src="logo.png" alt="Business Incubation Logo" id="logo" />
+                <h1>Business Incubation</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <img src="/icons/menu.png" alt="menu" class="menu" />
             </div>
-            <div class="service">
-                <h3>Funding Assistance</h3>
-			<img src="homepic5.jpg" alt="About Us Image">
-                <p>We help secure the funding your startup needs to succeed.</p>
-            </div>
-            <div class="service">
-                <h3>Networking Opportunities</h3>
-			<img src="homepic6.webp" alt="About Us Image">
-                <p>Connect with industry leaders, investors, and fellow entrepreneurs.</p>
-            </div>
-        </div>
-    </section>
+        </header>
 
-    <!-- About Us Section -->
-    <section id="about">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>We are a team of passionate entrepreneurs committed to helping startups succeed. Our mission is to empower the next generation of innovators.
-		The "Rural Entrepreneurship Development Phase 2" project was established based on the decision of the President of the Republic of Uzbekistan No. PQ-317 of July 13, 2022. This project BASICS FOR ESTABLISHING A BUSINESS INCUBATOR will be implemented in the Republic of Karakalpakstan, Bukhara, Jizzakh, Navoi, Kashkadarya, Samarkand, Syrdarya, Surkhandarya, Tashkent and Khorezm regions during 2022-2026.
-
- Business incubator centers were established in 3 cities of Samarkand, Bulungur district and Akdarya district in SAMARKAND region.</p>
-            <img src="homepic2.png" alt="About Us Image">
-        </div>
-    </section>
-
-    <!-- Team Section -->
-    <section id="team">
-        <div class="container">
-            <h2>Meet Our Team</h2>
-            <div class="team-member">
-                <img src="picgroup1.jfif" alt="Shodiyorkhon Abdivoyitov">
-                <h3>Shodiyorkhon Abdivoyitov</h3>
-                <p>Director of Improve</p>
+        <!-- Home Section (with background image) -->
+        <section id="home">
+            <div class="home-content">
+                <h2>Welcome to Our Business Incubator</h2>
+                <p>
+                    Your path to success starts here. We help startups grow and
+                    thrive.
+                </p>
+                <a href="#services" class="cta-button">Learn More</a>
             </div>
-            <div class="team-member">
-                <img src="picgroup2.jfif" alt="Fakhriyor Begmurodov">
-                <h3>Fakhriyor Begmurodov</h3>
-                <p>Director of Improve Bulungur</p>
-            </div>
-            <div class="team-member">
-                <img src="picgroup3.jfif" alt="Sanjar Narzullayev Botir ogli">
-                <h3>Sanjar Narzullayev Botir ogli</h3>
-                <p>Director of Improve Okdaryo</p>
-            </div>
-            <div class="team-member">
-                <img src="picgroup4.jfif" alt="Doston Ismoilov">
-                <h3>Doston Ismoilov Baxtiyor ogli</h3>
-                <p>Manager of Startup Center</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>Have questions or need more info? Reach out to us!</p>
-            <form action="">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-            <div class="contact-info">
-                <p>For quick support, contact us at:</p>
-                <p><strong>+998995992220</strong> or <strong>+998993323220</strong></p>
+        <!-- Services Section -->
+        <section id="services">
+            <div class="container">
+                <div class="service">
+                    <h1>Our Services</h1>
+                    <h3>Business Mentoring</h3>
+                    <img src="homepic3.jpeg" alt="About Us Image" />
+
+                    <p>
+                        Get expert advice and guidance to navigate the startup
+                        world.
+                    </p>
+                </div>
+                <div class="service">
+                    <h3>Funding Assistance</h3>
+                    <img src="homepic5.jpg" alt="About Us Image" />
+                    <p>
+                        We help secure the funding your startup needs to
+                        succeed.
+                    </p>
+                </div>
+                <div class="service">
+                    <h3>Networking Opportunities</h3>
+                    <img src="homepic6.webp" alt="About Us Image" />
+                    <p>
+                        Connect with industry leaders, investors, and fellow
+                        entrepreneurs.
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Improve Business Incubation. All Rights Reserved.</p>
-        </div>
-    </footer>
+        <!-- About Us Section -->
+        <section id="about">
+            <div class="container">
+                <h2>About Us</h2>
+                <p>
+                    We are a team of passionate entrepreneurs committed to
+                    helping startups succeed. Our mission is to empower the next
+                    generation of innovators. The "Rural Entrepreneurship
+                    Development Phase 2" project was established based on the
+                    decision of the President of the Republic of Uzbekistan No.
+                    PQ-317 of July 13, 2022. This project BASICS FOR
+                    ESTABLISHING A BUSINESS INCUBATOR will be implemented in the
+                    Republic of Karakalpakstan, Bukhara, Jizzakh, Navoi,
+                    Kashkadarya, Samarkand, Syrdarya, Surkhandarya, Tashkent and
+                    Khorezm regions during 2022-2026. Business incubator centers
+                    were established in 3 cities of Samarkand, Bulungur district
+                    and Akdarya district in SAMARKAND region.
+                </p>
+                <img src="homepic2.png" alt="About Us Image" />
+            </div>
+        </section>
 
-    <script src="script.js"></script>
-</body>
+        <!-- Team Section -->
+        <section id="team">
+            <div class="container">
+                <h2>Meet Our Team</h2>
+                <div class="team-member">
+                    <img src="picgroup1.jfif" alt="Shodiyorkhon Abdivoyitov" />
+                    <h3>Shodiyorkhon Abdivoyitov</h3>
+                    <p>Director of Improve</p>
+                </div>
+                <div class="team-member">
+                    <img src="picgroup2.jfif" alt="Fakhriyor Begmurodov" />
+                    <h3>Fakhriyor Begmurodov</h3>
+                    <p>Director of Improve Bulungur</p>
+                </div>
+                <div class="team-member">
+                    <img
+                        src="picgroup3.jfif"
+                        alt="Sanjar Narzullayev Botir ogli"
+                    />
+                    <h3>Sanjar Narzullayev Botir ogli</h3>
+                    <p>Director of Improve Okdaryo</p>
+                </div>
+                <div class="team-member">
+                    <img src="picgroup4.jfif" alt="Doston Ismoilov" />
+                    <h3>Doston Ismoilov Baxtiyor ogli</h3>
+                    <p>Manager of Startup Center</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <p>Have questions or need more info? Reach out to us!</p>
+                <form action="">
+                    <input
+                        type="text"
+                        name="name"
+                        placeholder="Your Name"
+                        required
+                    />
+                    <input
+                        type="email"
+                        name="email"
+                        placeholder="Your Email"
+                        required
+                    />
+                    <textarea
+                        name="message"
+                        placeholder="Your Message"
+                        required
+                    ></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+                <div class="contact-info">
+                    <p>For quick support, contact us at:</p>
+                    <p>
+                        <strong>+998995992220</strong> or
+                        <strong>+998993323220</strong>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer Section -->
+        <footer>
+            <div class="container">
+                <p>
+                    &copy; 2025 Improve Business Incubation. All Rights
+                    Reserved.
+                </p>
+            </div>
+        </footer>
+
+        <script src="script.js"></script>
+    </body>
 </html>
