--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Incubation</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
         <div class="container">
-            <img src="logo.png" alt="Business Incubation Logo" id="logo">
+            <div class="header-left">
+                <img src="logo.png" alt="Improve Logo" id="logo">
+            </div>
             <h1>Business Incubation</h1>
-            <nav>
+            <nav class="nav-menu">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
@@ -36,22 +45,20 @@
     <!-- Services Section -->
     <section id="services">
         <div class="container">
-           
+            <h1>Our Services</h1>
             <div class="service">
- 		<h1>Our Services</h1>
                 <h3>Business Mentoring</h3>
-			<img src="homepic3.jpeg" alt="About Us Image">
-
+                <img src="homepic3.jpeg" alt="Business Mentoring">
                 <p>Get expert advice and guidance to navigate the startup world.</p>
             </div>
             <div class="service">
                 <h3>Funding Assistance</h3>
-			<img src="homepic5.jpg" alt="About Us Image">
+                <img src="homepic5.jpg" alt="Funding Assistance">
                 <p>We help secure the funding your startup needs to succeed.</p>
             </div>
             <div class="service">
                 <h3>Networking Opportunities</h3>
-			<img src="homepic6.webp" alt="About Us Image">
+                <img src="homepic6.webp" alt="Networking Opportunities">
                 <p>Connect with industry leaders, investors, and fellow entrepreneurs.</p>
             </div>
         </div>
@@ -61,10 +68,13 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>We are a team of passionate entrepreneurs committed to helping startups succeed. Our mission is to empower the next generation of innovators.
-		The "Rural Entrepreneurship Development Phase 2" project was established based on the decision of the President of the Republic of Uzbekistan No. PQ-317 of July 13, 2022. This project BASICS FOR ESTABLISHING A BUSINESS INCUBATOR will be implemented in the Republic of Karakalpakstan, Bukhara, Jizzakh, Navoi, Kashkadarya, Samarkand, Syrdarya, Surkhandarya, Tashkent and Khorezm regions during 2022-2026.
-
- Business incubator centers were established in 3 cities of Samarkand, Bulungur district and Akdarya district in SAMARKAND region.</p>
+            <p>We are a team of passionate entrepreneurs committed to helping startups succeed. Our mission is to
+                empower the next generation of innovators. The "Rural Entrepreneurship Development Phase 2" project was
+                established based on the decision of the President of the Republic of Uzbekistan No. PQ-317 of July 13,
+                2022. This project BASICS FOR ESTABLISHING A BUSINESS INCUBATOR will be implemented in the Republic of
+                Karakalpakstan, Bukhara, Jizzakh, Navoi, Kashkadarya, Samarkand, Syrdarya, Surkhandarya, Tashkent and
+                Khorezm regions during 2022-2026. Business incubator centers were established in 3 cities of Samarkand,
+                Bulungur district and Akdarya district in SAMARKAND region.</p>
             <img src="homepic2.png" alt="About Us Image">
         </div>
     </section>
@@ -117,10 +127,11 @@
     <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Improve Business Incubation. All Rights Reserved.</p>
+            <p>© 2025 Improve Business Incubation. All Rights Reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
